@@ -3,6 +3,7 @@ set(RAPIDASSIST_HEADER_FILES ""
   ${CMAKE_SOURCE_DIR}/include/rapidassist/cppencoder.h
   ${CMAKE_SOURCE_DIR}/include/rapidassist/environment.h
   ${CMAKE_SOURCE_DIR}/include/rapidassist/filesystem.h
+  ${CMAKE_SOURCE_DIR}/include/rapidassist/generics.h
   ${CMAKE_SOURCE_DIR}/include/rapidassist/logger.h
   ${CMAKE_SOURCE_DIR}/include/rapidassist/random.h
   ${CMAKE_SOURCE_DIR}/include/rapidassist/strings.h
