@@ -1,6 +1,7 @@
 Changes for 0.5.0:
 
 * New feature: Implemented ra::strings::trim() and ra::strings::reverse().
+* New feature: Generics, a.k.a. popular templates.
 
 Changes for 0.4.1:
 
